# VoxelEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  PI - Mikolaj Siwek - projekt wokselowego silnika graficznego.md  README.md
docs/: 00_Home.md  01_Architektura_Ogolna.md  02_Renderowanie_Vulkan.md  03_System_Swiata_i_Chunki.md  04_System_Wejscia.md  05_Optymalizacje_i_Wydajnosc.md  06_Roadmap.md  07_Koncepcja_Silnika_Hybrydowego.md
docs/.obsidian/: app.json  appearance.json  community-plugins.json
docs/.obsidian/plugins/beautiful-mermaid-renderer/: data.json
docs/.obsidian/plugins/better-mermaid/: data.json
docs/.obsidian/plugins/lookout/: main.js  manifest.json  styles.css
docs/.obsidian/snippets/: mermaid-custom.css
docs/algorithms/: Frustum_Culling.md  Greedy_Meshing.md  Kompresja_RLE.md  Raycasting_DDA.md
docs/api/: Camera.md  Chunk.md  Frustum.md  GraphicsPipeline.md  Input.md  MegaBuffer.md  Time.md  VoxelEngine.md  VulkanContext.md  Window.md  World.md
docs/vulkan/: Krok_1_Inicjalizacja_Urzadzenia.md  Krok_2_Swapchain.md  Krok_3_Potok_Graficzny.md  Krok_4_Zasoby_i_Synchronizacja.md
shaders/: shader.frag  shader.vert
src/: main.cpp  pch.h
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Frustum.cpp  Frustum.h  Log.cpp  Log.h  Time.h  VoxelEngine.cpp  VoxelEngine.h  Window.cpp  Window.h
src/input/: ActionManager.cpp  ActionManager.h  GLFWInput.cpp  GLFWInput.h  Input.h  InputAction.h  InputCodes.h  KeyCodes.h  MouseButtonCodes.h
src/renderer/: Buffer.cpp  Buffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  MegaBuffer.cpp  MegaBuffer.h  Shader.cpp  Shader.h  Vertex.h  VmaUsage.cpp  VoxelMesh.cpp  VoxelMesh.h  VulkanContext.cpp  VulkanContext.h
src/utils/: FileSystem.cpp  FileSystem.h  ThreadPool.h
src/world/: Chunk.cpp  Chunk.h  World.cpp  World.h
